<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.skymatic.javafxtest</groupId>
    <artifactId>javafx-helloworld</artifactId>
    <version>0.0.1</version>
    <description>Creates a JavaFx demo application and bundles it in packages for different OS.</description>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>13</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <!-- adds Implementation-Version which can be read during runtime -->
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <mainClass>de.skymatic.javafxtest.App</mainClass>
                        </manifest>
                    </archive>
                    <outputDirectory>${project.build.directory}/libs</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}/src/main/resources</directory>
                                    <includes>
                                        <include>version.txt</include>
                                        <include>launcher-mac.sh</include>
                                        <include>launcher-linux.sh</include>
                                        <include>launcher-win.bat</include>
                                        <include>LICENSE.txt</include>
                                    </includes>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>copy-libs</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/libs</outputDirectory>
                            <excludeArtifactIds>java-utils</excludeArtifactIds>
                        </configuration>
                    </execution>
                    <!-- it is possible that we do not need them
                    <execution>
                        <id>copy-linux-libs</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/linux-libs</outputDirectory>
                            <includeGroupIds>org.openjfx</includeGroupIds>
                            <classifier>linux</classifier>
                        </configuration>
                    </execution>
                    <execution>
                        <id>copy-mac-libs</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/mac-libs</outputDirectory>
                            <includeGroupIds>org.openjfx</includeGroupIds>
                            <classifier>mac</classifier>
                        </configuration>
                    </execution>
                    <execution>
                        <id>copy-win-libs</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/win-libs</outputDirectory>
                            <includeGroupIds>org.openjfx</includeGroupIds>
                            <classifier>win</classifier>
                        </configuration>
                    </execution>
                -->
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>jlink</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>jlink</executable>
                    <!-- optional -->
                    <workingDirectory>${project.build.directory}</workingDirectory>
                    <arguments>
                        <argument>"--module-path"</argument>
                        <argument>.\libs</argument>
                        <argument>"--add-modules"</argument>
                        <argument>${project.groupId}</argument>
                        <argument>"--output"</argument>
                        <argument>./runtime</argument>
                        <argument>"--strip-debug"</argument>
                        <argument>"--compress=2"</argument>
                    </arguments>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>assemble-linux</id>
                        <phase>install</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptors>
                                <descriptor>assembly-linux.xml</descriptor>
                            </descriptors>
                            <appendAssemblyId>false</appendAssemblyId>
                            <finalName>testkit-linux</finalName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>assemble-mac</id>
                        <phase>install</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptors>
                                <descriptor>assembly-mac.xml</descriptor>
                            </descriptors>
                            <appendAssemblyId>false</appendAssemblyId>
                            <finalName>testkit-mac</finalName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>assemble-win</id>
                        <phase>install</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptors>
                                <descriptor>assembly-win.xml</descriptor>
                            </descriptors>
                            <appendAssemblyId>false</appendAssemblyId>
                            <finalName>testkit-win</finalName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.3</version>
                <configuration>
                    <mainClass>de.skymatic.javafxtest.App</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>